// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should be able to be disabled 1`] = `
<button
  className="
      button
      button--disabled
    "
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="button__content-container"
  >
    Don't click me
  </div>
</button>
`;

exports[`Button should be able to have a type 1`] = `
<button
  className="
      button
      
    "
  onClick={[MockFunction]}
  type="submit"
>
  <div
    className="button__content-container"
  >
    Submit me
  </div>
</button>
`;

exports[`Button should be able to omit the onClick handler if it is type "submit" 1`] = `
<button
  className="
      button
      
    "
  type="submit"
>
  <div
    className="button__content-container"
  >
    Submit me
  </div>
</button>
`;

exports[`Button should render a button with content and require an onClick event handler by default 1`] = `
<button
  className="
      button
      
    "
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  type="button"
>
  <div
    className="button__content-container"
  >
    Click me
  </div>
</button>
`;
